UPDATE harden aperture storage isolation and reduce redundant writes